# alglin

./: .gitignore  .gitmodules  CMakeLists-blas-lapack.txt  CMakeLists-cflags.txt  CMakeLists.txt  README.md  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  alglin-build.bat  alglin-compile-all.bat  alglin-run-release.bat  alglin-run.bat  license.txt  makefile  makefile_config.mk  makefile_linux.mk  makefile_mingw.mk  makefile_osx.mk  openblas-download.bat  openblas-download.sh  openblas-install.bat  runtest.bat  setup.rb  sub_branches.yaml
Xcode/Alglin.xcodeproj/: project.pbxproj
Xcode/Alglin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/Alglin.xcodeproj/project.xcworkspace/xcuserdata/enrico.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/Alglin.xcodeproj/xcshareddata/xcschemes/: Alglin.xcscheme  Simplex1.xcscheme  Simplex2.xcscheme  Simplex3.xcscheme  test0.xcscheme  test1.xcscheme  test10.xcscheme  test11.xcscheme  test15.xcscheme  test2.xcscheme  test3.xcscheme  test4.xcscheme  test5.xcscheme  test6.xcscheme  test7.xcscheme  test8.xcscheme  test9.xcscheme
Xcode/Alglin.xcodeproj/xcuserdata/enrico.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Xcode/Alglin.xcodeproj/xcuserdata/enrico.xcuserdatad/xcschemes/: xcschememanagement.plist
alglin.xcodeproj/: project.pbxproj
alglin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
alglin.xcodeproj/project.xcworkspace/xcuserdata/enrico.xcuserdatad/: UserInterfaceState.xcuserstate
alglin.xcodeproj/xcshareddata/xcschemes/: Alglin.xcscheme  BABD_Lib.xcscheme  CompileAll.xcscheme  Simplex-Test1.xcscheme  Simplex-Test2.xcscheme  Simplex-Test3.xcscheme  Simplex-Test4.xcscheme  test0-FD.xcscheme  test1-small-factorization.xcscheme  test12-BandedMatrix.xcscheme  test13-BFGS.xcscheme  test14-BLOCKTRIG.xcscheme  test15-EIGS.xcscheme  test2-Threads.xcscheme  test3-Timing.xcscheme  test4-KKT.xcscheme  test5-Diaz.xcscheme  test6-Block.xcscheme  test7-BorderedCR.xcscheme  test8-Cinterface.xcscheme  test9-Cinterface.xcscheme
alglin.xcodeproj/xcuserdata/enrico.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
alglin.xcodeproj/xcuserdata/enrico.xcuserdatad/xcschemes/: CompileAll.xcscheme  xcschememanagement.plist
matlab/: test_cr.m  test_cr2.m
src/: ABD_Arceco.cc  ABD_Arceco.hh  ABD_Block.cc  ABD_Block.hh  ABD_Colrow.cc  ABD_Colrow.hh  ABD_Diaz.cc  ABD_Diaz.hh  Alglin++.cc  Alglin++.hh  Alglin.cc  Alglin.hh  AlglinConfig.hh  AlglinConfig.hh.tmpl  AlglinConfigWIN.hh  AlglinEigen.hh  AlglinFD.hh  AlglinSuperLU.hh  AlglinSuperLU.hh.tmpl  Alglin_Config.hh  Alglin_Config.hh.tmpl  Alglin_Eigen.cc  Alglin_Eigen.hh  Alglin_Eigen.hxx  Alglin_FD.hh  Alglin_SuperLU.hh  Alglin_SuperLU.hh.tmpl  Alglin_SuperLU.hxx  Alglin_ThreadPool.hh  Alglin_aux.cc  Alglin_aux.hh  Alglin_banded.hxx  Alglin_blas.hxx  Alglin_blas_ge.hxx  Alglin_ge.hxx  Alglin_general.hxx  Alglin_general_qr.hxx  Alglin_libs.hh  Alglin_sparse.cxx  Alglin_sparse.hxx  (+60 more)
src/Alglin/: ABD_Arceco.hxx  ABD_Block.hxx  ABD_Diaz.hxx  Alglin_FD.hxx  Alglin_aux.hxx  Alglin_libs.hh  BABD.hxx  BABD_Block.hxx  BABD_BorderedCR.hxx  BABD_C_interface.h  BABD_SuperLU.hxx  BlockBidiagonal.hxx  KKT_like.hxx  Simplex.hxx
src_tests/: AmodioN_test.cc  Amodio_test.cc  BABD_test.cc  BABD_test2.cc  Block_test.cc  BorderedCR_test.cc  Colrow_test.cc  CyclicReductionQR_test.cc  CyclicReduction_test.cc  Diaz_test.cc  KKT-test.cc  LU_test.hxx  QR-test.cc  QR_N_test.cc  QR_test.cc  SMALL-test.cc  Simplex-Test1.cc  Simplex-Test2.cc  Simplex-Test3.cc  Simplex-Test4.cc  SimplexTest1.cc  SimplexTest2.cc  SimplexTest3.cc  SimplexTest4.cc  SparseSort.txt  TestFD.cc  Timing.cc  load-windows-dll.hxx  test0-FD.cc  test1-small-factorization-alglin.cc  test1-small-factorization.cc  test10-FORTRAN.f90  test11-FORTRAN.f90  test12-BandedMatrix.cc  test13-BFGS.cc  test14-BLOCKTRID.cc  test15-EIGS.cc  test16-BorderedCR-Kaczmarz.cc  test17-BorderedCR-regressions.cc  test18-BorderedCR-coverage.cc  (+19 more)
src_windows/: AlglinConfigMKL.hh
srcs/: Alglin++.cc  Alglin++.hh  Alglin.cc  Alglin.hh  Alglin_aux.hh  Alglin_tmpl.hh  Colrow.cc  Colrow.hh  ColrowLU.cc  ColrowLU.hh  ColrowLU1.cc  ColrowLU_WORKING.cc  LU_ABD_Colrow.cc  LU_ABD_Colrow.hh  LU_Arceco.cc  LU_Arceco.hh  LU_ArcecoSolver.cc  LU_ArcecoSolver.hh  LU_BABD_Amodio.cc  LU_BABD_Amodio.hh  LU_BABD_AmodioN.cc  LU_BABD_AmodioN.hh  LU_BABD_Block.cc  LU_BABD_Block.hh  LU_BABD_CR.cc  LU_BABD_CR.hh  LU_BABD_QR.cc  LU_BABD_QR.hh  LU_BABD_QR_N.cc  LU_BABD_QR_N.hh
srcs_tests/: AmodioN_test.cc  Amodio_test.cc  ArcecoLU_test.cc  ArcecoLU_test1.cc  ArcecoLU_test2.cc  ArcecoLU_test_simple.cc  Block_test.cc  CR_test.cc  Colrow_test.cc  LU_test.hxx  QR_N_test.cc  QR_test.cc  TimeMeter.hh  Timing.cc
submodules/: Rakefile
third_parties/: Rakefile  build-all.bat  build-all.sh  build.sh  common-cmake.bat  common-download.bat  common-tgz.bat  common-vs.bat  common-zip.bat  common.rb
third_parties/Atlas/: atlas-build.sh
third_parties/BlasLapack/: Rakefile  blaslapack-build.bat  blaslapack-install.sh
third_parties/BlasLapack2/: Rakefile
third_parties/BlasLapack3/: readme.md
third_parties/Eigen3/: Rakefile  eigen3-build.bat  eigen3-build.sh
third_parties/OpenBlas/: Rakefile  openblas-build-32.bat  openblas-build-64.bat  openblas-build.bat  openblas-build.sh  openblas-install-win.bat  openblas-install.sh
third_parties/OpenBlas/win32_debug/: openblas.exp
third_parties/OpenBlas/win32_debug/lib/: openblas.lib
third_parties/OpenBlas/win32_release/: openblas.exp
third_parties/OpenBlas/win32_release/include/: openblas_config.h
third_parties/OpenBlas/win64_debug/: openblas.exp
third_parties/OpenBlas/win64_debug/include/: openblas_config.h
third_parties/OpenBlas/win64_debug/lib/: openblas.lib
third_parties/OpenBlas/win64_release/: openblas.exp
third_parties/SuperLU/: Rakefile  superlu-build.bat  superlu-build.sh  superlu-install-win.sh  superlu-install.sh
win_compile/: alglin-compile-vs2013.bat  alglin-compile-vs2015.bat  alglin-install-vs2013.bat  alglin-install-vs2015.bat
